--- a/bioinfo-tools/Dockerfile.bioinfo
+++ b/bioinfo-tools/Dockerfile.bioinfo
@@ -180,7 +180,7 @@ RUN /opt/R/${R_VERSION}/bin/Rscript -e 'BiocManager::install(c(\
 	"workflowr"\
 	), dependencies = TRUE, upgrade_dependencies = TRUE, ask = FALSE)'
 
-RUN --mount=type=secret,id=github_pat,dst=/tmp/github_pat /opt/R/${R_VERSION}/bin/R -e \
+RUN --mount=type=secret,id=github_pat /opt/R/${R_VERSION}/bin/R -e \
 	'remotes::install_github(c(\
 	"atakanekiz/CIPR-Package", \
 	"bnprks/BPCells/r", \
@@ -241,7 +241,7 @@ RUN --mount=type=secret,id=github_pat,dst=/tmp/github_pat /opt/R/${R_VERSION}/bi
 	"yanwu2014/swne", \
 	"xmc811/Scillus@v0.5.0", \
 	),\
-	auth_token = readLines("/tmp/github_pat"), \
+	auth_token = readLines("/run/secrets/github_pat"), \
 	dependencies = TRUE, \
 	upgrade = "always")'
 
