--- a/r-base/Dockerfile.r-base
+++ b/r-base/Dockerfile.r-base
@@ -156,7 +156,7 @@ RUN /opt/R/${R_VERSION}/bin/Rscript -e 'BiocManager::install(c(\
 	"tidymodels"\
 	), dependencies = TRUE, upgrade_dependencies = TRUE, ask = FALSE)'
 
-RUN --mount=type=secret,id=github_pat,dst=/tmp/github_pat /opt/R/${R_VERSION}/bin/R -e \
+RUN --mount=type=secret,id=github_pat /opt/R/${R_VERSION}/bin/R -e \
 	'remotes::install_github(c(\
 	"ACCLAB/dabestr", \
 	"aloy/qqplotr", \
@@ -226,7 +226,7 @@ RUN --mount=type=secret,id=github_pat,dst=/tmp/github_pat /opt/R/${R_VERSION}/bi
 	"XiaoLuo-boy/ggheatmap", \
 	"yeukyul/lindia"\
 	),\
-	auth_token = readLines("/tmp/github_pat"), \
+	auth_token = readLines("/run/secrets/github_pat"), \
 	dependencies = TRUE, \
 	upgrade = "always")'
 
