--- a/base/Dockerfile.base
+++ b/base/Dockerfile.base
@@ -10,7 +10,6 @@ RUN apt-get -qq update -y && \
 	apt-get install -y --no-install-recommends \
 	apt-transport-https \
 	apt-utils \
-	bat \
 	build-essential \
 	bwidget \
 	bzip2 \
@@ -184,10 +183,21 @@ ENV LC_ALL=en_US.UTF-8
 
 # Modern Unix components ------------------------------------------------------#
 
-RUN curl -LSfs https://raw.githubusercontent.com/cantino/mcfly/master/ci/install.sh | sh -s -- --git cantino/mcfly
+ARG PIXI_VERSION=v0.39.0
 
-RUN python3 -m pip install --upgrade pip wheel \
-	&& python3 -m pip install httpie
+RUN curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=${PIXI_VERSION} bash
+
+ENV PATH="/root/.pixi/bin:${PATH}"
+
+RUN pixi info 
+
+RUN echo 'eval "$(pixi completion --shell bash)"' >> /root/.bashrc
+
+RUN pixi global install bat
+
+RUN pixi global install httpie --expose http
+
+RUN curl -LSfs https://raw.githubusercontent.com/cantino/mcfly/master/ci/install.sh | sh -s -- --git cantino/mcfly
 
 # Install from crates.io ------------------------------------------------------#
 
