--- a/posit-workbench/Dockerfile.posit-workbench
+++ b/posit-workbench/Dockerfile.posit-workbench
@@ -56,20 +56,20 @@ RUN /opt/R/${R_VERSION}/bin/Rscript -e 'BiocManager::install(c(\
 	), dependencies = TRUE, upgrade_dependencies = TRUE, ask = FALSE)'
 
 RUN /opt/R/${R_VERSION}/bin/R -e \
-	'pak::repo_add(CRAN = "RSPM@${R_SNAPSHOT}");\
+	"pak::repo_add(CRAN = 'RSPM@${R_SNAPSHOT}');\
 	pak::pkg_install(c(\
-	"colourpicker", \
-	"dichromat", \
-	"quarto", \
-	"plot3D", \
-	"plotly", \
-	"shinyAce", \
-	"shinyBS", \
-	"shinydashboard", \
-	"shinyjqui", \
-	"shinythemes", \
-	"tableHTML", \
-	"txtplot"))'
+	'colourpicker', \
+	'dichromat', \
+	'quarto', \
+	'plot3D', \
+	'plotly', \
+	'shinyAce', \
+	'shinyBS', \
+	'shinydashboard', \
+	'shinyjqui', \
+	'shinythemes', \
+	'tableHTML', \
+	'txtplot'))"
 
 RUN --mount=type=secret,id=github_pat /opt/R/${R_VERSION}/bin/R -e \
 	'remotes::install_github(c(\
@@ -101,7 +101,9 @@ RUN --mount=type=secret,id=github_pat /opt/R/${R_VERSION}/bin/R -e \
 	"mattcowgill/ggannotate", \
 	"mdhall272/ggarchery", \
 	"metrumresearchgroup/ggedit", \
+	"mjskay/ggblend", \
 	"mjskay/ggdist", \
+	"mucollective/multiverse", \
 	"nsgrantham/ggbraid", \
 	"nsgrantham/ggdark", \
 	"nx10/httpgd", \
@@ -113,6 +115,7 @@ RUN --mount=type=secret,id=github_pat /opt/R/${R_VERSION}/bin/R -e \
 	"ricardo-bion/ggradar", \
 	"ricardo-bion/ggtech", \
 	"rivasiker/ggHoriPlot", \
+	"rstudio/vetiver-r", \
 	"Ryo-N7/tvthemes", \
 	"showteeth/ggpie", \
 	"stefanedwards/lemon", \
@@ -138,6 +141,21 @@ RUN --mount=type=secret,id=github_pat /opt/R/${R_VERSION}/bin/R -e \
 RUN mamba install --quiet -y \
 	ipython \
 	jupyter \
+	jupyter_bokeh \
+	jupyter-dash \
+	jupyterlab \
+	jupyterlab_autoversion \
+	jupyterlab_execute_time \
+	jupyterlab-dash \
+	jupyterlab-kernelspy \
+	jupyterlab-markup \
+	jupyterlab-nvdashboard \
+	jupyterlab-plotly-extension \
+	jupyterlab-system-monitor \
+	jupyterlab-topbar \
+	jupyterlab-variableinspector \
+	jupyterlab_widgets \
+	jupyterlab-git \
 	jupytext \
 	notebook \
 	requests \
@@ -167,31 +185,63 @@ RUN ${CONDA_DIR}/bin/pip install --no-cache-dir \
 	IPython>=8.28.0 \
 	jupyter>=1.1.1 \
 	jupyterlab-kernelspy==4.0.0 \
+	jupyterlab-quarto \
 	nbdime==4.0.2 \
 	prompt_toolkit>=3.0.48 \
 	pyupset==0.1.1.post7 \
 	requests>=2.32.3 \
-	watermark==2.5.0
+	watermark==2.5.0 \
+	vetiver \
+	pwb_jupyterlab \
+	rsp_jupyter \
+	rsconnect_jupyter \
+	rsconnect_python
 
 RUN	ln -s ${CONDA_DIR}/bin/jupyter /usr/local/bin/jupyter
 
 RUN	ln -s ${CONDA_DIR}/bin/jupyter /usr/bin/jupyter
 
-RUN	set -ex && \
-	mamba upgrade --all \
+RUN ${CONDA_DIR}/bin/jupyter-nbextension install --sys-prefix --py rsp_jupyter && \
+	${CONDA_DIR}/bin/jupyter-nbextension enable --sys-prefix --py rsp_jupyter && \
+	${CONDA_DIR}/bin/jupyter-nbextension install --sys-prefix --py rsconnect_jupyter && \
+	${CONDA_DIR}/bin/jupyter-nbextension enable --sys-prefix --py rsconnect_jupyter && \
+	rm -f ~/.jupyter/jupyter_notebook_config.json
+
+RUN set -ex && \
+	mamba update --all \
 	-c rapidsai -c pytorch -c nvidia && \
-	mamba install --all \
-	-c rapidsai -c pytorch -c nvidia \
-	rapids=24.10 \
-	cuda-version=12.4 \
-	'pytorch=*=*cuda*' \
-	torchvision \
-	torchaudio \
-	pytorch-cuda=12.4 \
+	conda clean -a -y && \
+	mamba clean -a -y && \
+	mamba install \
+	-c https://repo.prefix.dev/rapidsai \
+	-c https://repo.prefix.dev/pytorch \
+	-c https://repo.prefix.dev/nvidia \
+	-c https://repo.prefix.dev/conda-forge \
+	cuda-toolkit==12.4.1 \
+	libcufile-static=1.9.1.3 \
+	gds-tools=1.9.1.3 \
+	'rapids=24.10.*=cuda12_py312_*' \
+	'pytorch=*=*cuda12.4*' \
+	'pytorch-cuda=12.4' \
 	nx-cugraph=24.10 && \
+	conda clean -a -y && \
+	mamba clean -a -y && \
 	conda info -a
 
 RUN ${CONDA_DIR}/bin/python -m ipykernel install
+
+# Install VSCode code-server, extensions, etc. --------------------------------#
+
+COPY vscode.extensions.conf /etc/rstudio/vscode.extensions.conf
+
+# Install RStudio Professional Drivers ----------------------------------------#
+
+RUN curl -O https://cdn.rstudio.com/drivers/7C152C12/installer/rstudio-drivers_${DRIVERS_VERSION}_amd64.deb && \
+	apt-get update && \
+	gdebi --non-interactive rstudio-drivers_${DRIVERS_VERSION}_amd64.deb && \
+	rm -rf /var/lib/apt/lists/* && \
+	rm -f rstudio-drivers_${DRIVERS_VERSION}_amd64.deb && \
+	cp /opt/rstudio-drivers/odbcinst.ini.sample /etc/odbcinst.ini
 
 # Expose necessary ports
 EXPOSE 8788/tcp
