--- a/python-base/Dockerfile.python-base
+++ b/python-base/Dockerfile.python-base
@@ -28,13 +28,13 @@ RUN wget -q -c https://github.com/conda-forge/miniforge/releases/download/${MINI
 	-c bioconda \
 	rapids=24.10 \
 	python=${PYTHON_VERSION} \
+	cuda-toolkit==12.4.1 \
 	cuda-version=12.4 \
 	mamba \
 	scvi-tools \
 	snakemake \
+	jaxlib=0.4.34 \
 	'pytorch=*=*cuda*' \
-	torchvision \
-	torchaudio \
 	pytorch-cuda=12.4 \
 	graphistry \
 	networkx \
@@ -48,12 +48,12 @@ RUN set -ex && \
 	conda config --set always_yes yes --set changeps1 no && \
 	conda clean --all --yes && \
 	mamba clean --all --yes && \
-	mamba upgrade --all -n base --yes
+	mamba update --all -n base --yes
 
 RUN mamba install --quiet -y \
 	dvc \
 	jax \
-	jaxlib \
+	jaxlib=0.4.34 \
 	numba-scipy \
 	numba \
 	scikit-image \
@@ -78,9 +78,7 @@ RUN mamba install --quiet -y \
 	pacmap \
 	rapids \
 	cuda-version=12.4 \
-	pytorch \
-	torchvision \
-	torchaudio \
+	'pytorch=*=*cuda12.4*' \
 	pytorch-cuda=12.4 \
 	nx-cugraph && \
 	conda clean -a -y
@@ -105,18 +103,30 @@ RUN ${CONDA_DIR}/bin/pip install --no-cache-dir \
 	skope-rules==1.0.1 \
 	truncated_normal==0.4
 
+	RUN ${CONDA_DIR}/bin/pip install --extra-index-url=https://pypi.nvidia.com 'polars[gpu,all]'
+
 RUN	set -ex && \
-	mamba upgrade --all \
+	mamba update --all \
 	-c rapidsai -c pytorch -c nvidia && \
-	mamba install --all \
-	-c rapidsai -c pytorch -c nvidia \
-	rapids=24.10 \
-	cuda-version=12.4 \
-	'pytorch=*=*cuda*' \
-	torchvision \
-	torchaudio \
-	pytorch-cuda=12.4 \
+	conda clean -a -y && \
+	mamba clean -a -y && \
+	mamba install \
+	-c https://repo.prefix.dev/rapidsai \
+	-c https://repo.prefix.dev/pytorch \
+  -c https://repo.prefix.dev/nvidia \
+	-c https://repo.prefix.dev/conda-forge \
+	cuda-toolkit==12.4.1 \
+	libcufile-static=1.9.1.3 \
+	gds-tools=1.9.1.3 \
+	'rapids=24.10.*=cuda12_py312_*' \
+	'pytorch=*=*cuda12.4*' \
+	'pytorch-cuda=12.4' \
+	graspologic \
+	karateclub \
+	leidenalg \
 	nx-cugraph=24.10 && \
+	conda clean -a -y && \
+	mamba clean -a -y && \
 	conda info -a
 
 CMD [ "/bin/bash" ]
