--- a/r-python/Dockerfile.r-python
+++ b/r-python/Dockerfile.r-python
@@ -4,6 +4,14 @@ FROM etretiakov/r-base:latest
 LABEL maintainer="Evgenii Tretiakov <evgenii.tretiakov@meduniwien.ac.at>"
 
 ARG DEBIAN_FRONTEND=noninteractive
+ARG MINIFORGE_VERSION="24.7.1-2"
+ARG PYTHON_VERSION=3.12
+ENV CONDA_DIR=/opt/conda
+ENV PATH=$CONDA_DIR/bin:$PATH
+ENV CONDA_CUDA_OVERRIDE="12.4"
+ARG PYTHON_SNAPSHOT='2024-12-01'
+ARG R_VERSION=4.4.2
+ARG R_SNAPSHOT='2024-12-01'
 ENV QUARTO_VERSION="1.6.39"
 
 # Copy Conda from python-base image
@@ -11,8 +19,23 @@ COPY --from=etretiakov/python-base /opt/conda /opt/conda
 ENV PATH=/opt/conda/bin:$PATH
 
 # Install reticulate and configure
-RUN /opt/R/${R_VERSION}/bin/Rscript -e "install.packages('reticulate')"
+RUN /opt/R/${R_VERSION}/bin/Rscript -e \
+	"pak::repo_add(CRAN = 'RSPM@${R_SNAPSHOT}');\
+	pak::pkg_install(c(\
+	'reticulate', \
+	'quarto'))"
 ENV RETICULATE_PYTHON=/opt/conda/bin/python
+
+RUN ${CONDA_DIR}/bin/pip config set global.index-url https://packagemanager.rstudio.com/pypi/${PYTHON_SNAPSHOT}/simple
+
+RUN ${CONDA_DIR}/bin/mamba install  'ipykernel>=6.29.5' 'jupyterlab>=4.3.2' -y
+
+
+RUN /opt/R/${R_VERSION}/bin/Rscript -e "IRkernel::installspec(user = FALSE)"
+
+RUN ${CONDA_DIR}/bin/pip install --no-cache-dir jupyterlab-quarto
+
+RUN ${CONDA_DIR}/bin/python -m ipykernel install
 
 # After installing R and before installing Quarto
 ENV QUARTO_R=/opt/R/${R_VERSION}/bin/R
