--- a/r-base/Dockerfile.r-base
+++ b/r-base/Dockerfile.r-base
@@ -60,8 +60,8 @@ RUN ln -s /opt/R/${R_VERSION}/bin/R /usr/local/bin/R && \
 	ln -s /opt/R/${R_VERSION}/bin/Rscript /usr/local/bin/Rscript
 
 # Set R environment variables
-ENV R_HOME=/opt/R/${R_VERSION}/lib/R
-ENV PATH=/opt/R/${R_VERSION}/bin:${PATH}
+ENV R_HOME /opt/R/${R_VERSION}/lib/R
+ENV PATH /opt/R/${R_VERSION}/bin:${PATH}
 
 # Install R packages
 RUN /opt/R/${R_VERSION}/bin/R -e \
@@ -234,6 +234,7 @@ RUN --mount=type=secret,id=github_pat /opt/R/${R_VERSION}/bin/R -e \
 	"tidymodels/infer", \
 	"tidymodels/tidyposterior", \
 	"tidymodels/tidypredict", \
+	"tidyverse/elmer", \
 	"tidyverse/tidyverse", \
 	"TysonStanley/tidyfast", \
 	"USCCANA/netplot", \
